2008-09-03  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* reporting/fgraph.php: Fixed bug where a graph wouldn't return
	when free search was specified. Also made SQL safer against
	attacks since fgraph can be accessed by anyone. This should be
	fixed in later versions so there has to be no SQL query passed

	* operation/events/events_rss.php: Made RSS feed better. Now you can
	also pass a filter from events.php. Fixed direction of the links

	* operation/events/events.php: Added a filter on agent name. Updated
	for RSS feeds. Added filter on event id

	* install.php: A little bit of automatic field filling. Corrected some
	text for more correct English and update to the new URL specification

2008-09-03  Esteban Sanchez  <estebans@artica.es>

	* include/functions_html.php: Fixed a typo error in print_textarea
	that cause not showing the value given.

2008-09-03  Sancho Lerena <slerena@artica.es>

	* include/functions_reporting_pdf.php: Moved to contrib branch.

	* install.php: Update sample of use for homeurl variable. This should
	not contain HTTP:/x.x.x.x anymore.

	* operation/events/events_rss.php: Makes use of homeurl in the 
	correct way.

	* operation/agentes/estado_agente.php: Fixed a sprintf typo.

2008-09-03  Esteban Sanchez  <estebans@artica.es>

	* include/config_process.php: Checks in homeurl config variable. Style
	corrections.

	* include/help/en/help_date_format.php: Points to oficial PHP manual
	on php.net.

	* godmode/agentes/modificar_agente.php: Escape quotes which was
	causing SQL errors.

	* godmode/reporting/map_builder.php: Fixed divs and tables widths.

	* include/functions.php, operation/agentes/datos_agente.php: Style
	corrections.

	* include/functions_db.php: Style corrections. Added comments for
	translators.

	* operation/extensions.php: Added login checking.

	* operation/reporting/reporting_viewer.php: Minor bug that was causing
	javascript failures.

	* operation/users/user.php: Use print_help_tip() to show contextual
	help.
