@@ -2058,6 +2058,7 @@ $date = get_parameter ("date");
 $graphic_type = (string) get_parameter ('tipo');
 $mode = get_parameter ("mode", 1);
 $url = get_parameter ('url','');
+$url = unsafe_string ($url);
 
 if ($graphic_type) {
 	switch ($graphic_type) {
